# Project-09-team1-drug-detection

./: .gitignore  README.md  main.py  pyproject.toml
data_collection/: 01_crowling_drug_data.ipynb
modeling/segment/: 01_fastsam_segment_baseline.ipynb  02_yolo_segment_baseline.ipynb  fastsam_segment.py
