[project]
name = "drug-detection-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "selenium>=4.35.0",
    "ultralytics>=8.3.198",
    "undetected-chromedriver>=3.5.5",
]
